# fsm

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  StaticPolymorphism.cpp
benchmarks/util/: random.hpp
example/: CMakeLists.txt  OrderFSM.cpp  OrderFSM.hpp
include/fsm/: FSM.hpp
